<resources>
    <string name="app_name">Fukuoka City Science Museum</string>
    <string name="server_context">http://192.168.1.200:8080/IPS_Server/</string>

    <string name="flag_hint">Flag</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>

    <string name="def_text">Null</string>
    <string name="zero">0</string>
    <string name="mac_label">MAC:</string>
    <string name="min_label">Min Rssi:</string>
    <string name="max_label">Max Rssi:</string>
    <string name="avg_label">Avg Rssi:</string>
    <string name="scan_label">Scan Times:</string>
    <string name="time_label">Elapsed time:</string>
</resources>